fix: unresolve host and schemes swagger
