# docs/swagger/swagger.json
@@ -573,6 +573,10 @@
             }
         }
     },
+    "schemes": [
+        "https",
+        "http"
+    ],
     "securityDefinitions": {
         "ApiKeyAuth": {
             "description": "Type \"Bearer\" followed by a space and JWT token.",
